<resources>
    <string name="app_name">News App</string>
    <string name="author">author</string>
    <string name="published_at">published at</string>
    <string name="title">title</string>
    <string name="software">Software</string>
    <string name="date">date</string>
    <string name="source_name">via %1$s</string>
    <string name="description">description</string>
    <string name="loading">Loading</string>
    <string name="glide">Glide</string>
    <string name="picasso">Picasso</string>
    <string name="url">Further reading: %1$s</string>
    <string name="open_circle_button">BEHOLD THE CIRCLE!</string>
    <string name="open_maps">OPEN THE MAP!</string>
    <string-array name="categories_array">
        <item>software</item>
        <item>technology</item>
        <item>science</item>
        <item>education</item>
        <item>entertainment</item>
    </string-array>
</resources>