<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ArticleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/titleEndGuideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

        <TextView
            android:id="@id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/title"
            app:layout_constraintEnd_toStartOf="@id/titleEndGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/source_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/source_name"
            app:layout_constraintStart_toEndOf="@id/titleEndGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/description"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/glide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glide"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/glide_image"
            app:layout_constraintTop_toBottomOf="@id/glide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@mipmap/ic_launcher"
            android:contentDescription="@string/glide" />

        <TextView
            android:id="@+id/picasso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picasso"
            app:layout_constraintTop_toBottomOf="@id/glide_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/picasso_image"
            app:layout_constraintTop_toBottomOf="@id/picasso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@mipmap/ic_launcher"
            android:contentDescription="@string/picasso" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>